--- a/src/pCloudPhotoOrganizer/Views/PCloudAlbumNamePage.xaml
+++ b/src/pCloudPhotoOrganizer/Views/PCloudAlbumNamePage.xaml
@@ -25,7 +25,11 @@
           IsChecked="True" />
       <Label
           Text="Move photos instead of copying"
-          VerticalOptions="Center" />
+          VerticalOptions="Center">
+        <Label.GestureRecognizers>
+          <TapGestureRecognizer Tapped="OnMoveOptionTapped" />
+        </Label.GestureRecognizers>
+      </Label>
     </HorizontalStackLayout>
 
     <Label
