--- a/src/pCloudPhotoOrganizer/Views/AboutPage.xaml
+++ b/src/pCloudPhotoOrganizer/Views/AboutPage.xaml
@@ -16,6 +16,11 @@
           x:Name="VersionLabel"
           FontSize="Medium" />
 
+      <Label
+          x:Name="AndroidVersionLabel"
+          FontSize="Medium"
+          IsVisible="False" />
+
       <Label Text="Auteur : Jean-Pierre Planas" />
 
       <Label Text="GitHub : https://github.com/sybaris/pCloudPhotoOrganizer"
